fix: flex align for IE11

--- a/packages/theme/src/theme/_navbar.search.scss
+++ b/packages/theme/src/theme/_navbar.search.scss
@@ -9,6 +9,7 @@
 			&:after {
 				content: '';
 				flex: 1 0 auto;
+				min-height: $navbar-height;
 			}
 		}
 
